Intermittent accessible/tests/browser/events/browser_test_panel.js | single tracking bug
Categories
(Core :: Disability Access APIs, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox112 | --- | fixed |
People
(Reporter: jmaher, Assigned: Jamie)
References
Details
(Keywords: intermittent-failure, intermittent-testcase, Whiteboard: [stockwell disable-recommended])
Attachments
(2 files)
| Reporter | ||
Comment 1•3 years ago
|
||
Additional information about this bug failures and frequency patterns can be found by running: ./mach test-info failure-report --bug 1784752
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 28•2 years ago
|
||
There have been 34 total failures in the last 7 days, recent failure log.
Affected platforms are:
- linux1804-64-asan-qr
- linux1804-64-qr
- windows7-32-qr
[task 2023-02-08T20:48:55.927Z] 20:48:55 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_panel.js | Popup panel is associated with the chrome window -
[task 2023-02-08T20:48:55.927Z] 20:48:55 INFO - Buffered messages finished
[task 2023-02-08T20:48:55.928Z] 20:48:55 INFO - TEST-UNEXPECTED-FAIL | accessible/tests/browser/events/browser_test_panel.js | Test timed out -
[task 2023-02-08T20:48:55.939Z] 20:48:55 INFO - GECKO(1581) | MEMORY STAT | vsize 20984022MB | residentFast 1582MB
[task 2023-02-08T20:48:55.940Z] 20:48:55 INFO - TEST-OK | accessible/tests/browser/events/browser_test_panel.js | took 90463ms
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 33•2 years ago
|
||
There have been 67 total failures in the last 7 days, recent failure log.
Affected platforms are:
- linux1804-64-asan-qr
- linux1804-64-qr
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 35•2 years ago
|
||
I'm looking into this.
| Assignee | ||
Comment 36•2 years ago
|
||
Here's what's happening:
- We process and fire mutation events directly from the queue.
- When we fire an event, that enters JS.
- I'm not entirely certain how this happens because I can't get a full stack with a debugger or anything else I've tried due to the JS frames. It could be because of the XPCOM observer or it could be because A11YLOG is enabled for those tests and that is somehow entering JS, which is certainly possible with XUL.
- JS code runs which hides the panel.
- We call QueueMutationEvent.
- Because we are still processing the events (1), we haven't cleaned up the previous mutation event queue or the various event target bits (ShowEventTarget, etc.) on the Accessibles.
- As a result, we drop the hide event because the show event flag is still set on the Accessible.
- The test times out because the hide event never gets fired.
Disabling A11YLOG for those tests (which we should do anyway - that was only meant to be temporary) seems to fix this locally, which suggests logging is probably the re-entry culprit in this case. However, I still think this could be a potential problem regardless.
| Assignee | ||
Comment 37•2 years ago
|
||
See the code comments for explanation.
| Assignee | ||
Comment 38•2 years ago
|
||
This was only ever meant to be temporary, but I forgot to remove it.
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 41•2 years ago
|
||
I have a patch up here. I spoke to the reviewer this morning and it should get reviewed soon.
| Comment hidden (Intermittent Failures Robot) |
Comment 43•2 years ago
|
||
| Assignee | ||
Comment 45•2 years ago
|
||
Uh, yes, I did. That said, there won't be bustage if part 1 lands without part 2.
| Assignee | ||
Comment 46•2 years ago
|
||
I've queued landing of part 2.
Comment 47•2 years ago
|
||
Comment 48•2 years ago
|
||
FWIW, this still fails frequently on Windows 10.
| Assignee | ||
Comment 49•2 years ago
|
||
Terrific. I guess it must be a different failure somehow, but I'd need to see a log for it to know for sure.
Comment 50•2 years ago
|
||
Your wish is my command :P
https://treeherder.mozilla.org/logviewer?job_id=406905380&repo=try&lineNumber=2371
| Assignee | ||
Comment 51•2 years ago
|
||
🧞♂️
This is definitely a different failure. For some reason, vsync doesn't get disabled, perhaps suggesting that the a11y refresh driver is still running... or maybe some other refresh driver.
Updated•2 years ago
|
Comment 52•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/ff8b2808810a
https://hg.mozilla.org/mozilla-central/rev/8b5f11edd63c
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Description
•