Bug 1784752 part 1: Reset the mutation events queue and Accessible state bits before firing any mutation events. r=eeejay

See the code comments for explanation.

Differential Revision: https://phabricator.services.mozilla.com/D170556